# FileSentinel

./: CMakeLists.txt  README.md  checksum.cpp  config.yaml
src/: CMakeLists.txt  main.cpp
src/TUI/: CMakeLists.txt  TUI.cpp  TUI.hpp
src/checksum/: CMakeLists.txt  checksum.cpp  checksum.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp
